# resleep

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
apple/: project.yml
apple/Configs/: Local.xcconfig.example  Shared.xcconfig
apple/SleepKit/: Package.swift
apple/SleepTracker-Watch/App/: WatchApp.swift
apple/SleepTracker-Watch/Resources/: Info.plist  PrivacyInfo.xcprivacy
apple/SleepTracker-Watch/Scenes/: WatchHomeView.swift
apple/SleepTracker-Watch/Services/: WatchAppState.swift  WatchHapticRunner.swift
apple/SleepTracker-iOSTests/: M67SimulationLoopsTests.swift  SettingsPrivacyTests.swift  SleepAIContractTests.swift
apple/SleepTracker.xcodeproj/: project.pbxproj
apple/SleepTracker.xcworkspace/: contents.xcworkspacedata
docs/: M7_UNATTENDED_DEVICE_QA.md  M8_TESTFLIGHT_CHECKLIST.md  NIGHT_INTELLIGENCE_ROADMAP.md  PRIVACY_POLICY.md  RELEASE_B_NOTES.md  RELEASE_C_NOTES.md  SNORE_MODELS.md  TERMS.md  _config.yml  index.md
python/: README.md  pyproject.toml  requirements.txt
python/notebooks/: .gitkeep
python/tests/: test_export_contract.py  test_llm_training_dataset.py  test_tiny_transformer_smoke.py
python/training/: __init__.py  train_snore_cnn.py  train_tiny_transformer.py
python/training/configs/: __init__.py  tiny_transformer.py
python/training/data/: __init__.py  dataset.py  esc50_snore.py  snore_dataset.py
python/training/export/: export_coreml.py  export_snore.py
python/training/llm/: README.md  __init__.py  build_dataset.py  configs.py  eval_lora.py  fuse.py  train_lora.py
python/training/llm/seed_data/: contextual_sleep_qa.jsonl  refusals.jsonl  sleep_qa.jsonl
python/training/models/: __init__.py  snore_cnn.py  tiny_transformer.py
rust/: Cargo.toml
rust/crates/sleep-cli/: Cargo.toml
rust/crates/sleep-cli/src/: main.rs
rust/crates/sleep-core/: Cargo.toml  build.rs
rust/crates/sleep-core/src/: bindings.rs  lib.rs
rust/crates/sleep-core/src/alarm/: mod.rs
rust/crates/sleep-core/src/db/: repo.rs  schema.rs
rust/crates/sleep-core/src/engine/: config.rs  state.rs
rust/crates/sleep-core/src/models/: inference.rs
rust/crates/sleep-core/src/signal/: actigraphy.rs  features.rs  mod.rs  nightmare.rs
rust/crates/sleep-core/tests/: engine_test.rs
rust/sql/: local_schema.sql
scripts/: archive_testflight.sh  bootstrap.sh  build_rust_xcframework.sh  capture_app_store_screenshots.sh  capture_ui_smoke.sh  exportOptions.plist  gen_bindings.sh  generate_app_icon.py  generate_xcode_project.sh  install_to_device.sh  open_xcode.sh  test_all.sh  train_and_export_model.sh
(+138 files in other folders)
