[package]
name = "sleep-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "sleep_core"
# `staticlib` for iOS device, `rlib` for CLI / tests.
crate-type = ["staticlib", "rlib"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
swift-bridge = "0.1"

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
swift-bridge-build = "0.1"
